--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
