--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.7",
     "@supabase/supabase-js": "^2.2.1",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "supabase": "^1.37.1"
   }
 }
